[package]
name = "moonbeam-rpc-core-debank"
authors = { workspace = true }
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = { workspace = true }
version = "0.6.0"

[dependencies]
ethereum-types = { workspace = true, features = [ "std" ] }
hex = { workspace = true }
jsonrpsee = { workspace = true, features = [ "macros", "server" ] }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }

# Frontier
fc-rpc-core = { workspace = true }
