[package]
name = "moonbeam-rpc-debank"
authors = { workspace = true }
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = { workspace = true }
version = "0.6.0"

[dependencies]
async-trait = { workspace = true }
ethereum-types = { workspace = true }
evm = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true, features = [ "macros", "server" ] }
log = { workspace = true }
serde_json = { workspace = true, features = [ "std" ] }
tokio = { workspace = true, features = [ "sync" ] }

# Moonbeam
moonbeam-client-evm-tracing = { workspace = true }
moonbeam-rpc-core-debank = { workspace = true }
moonbeam-rpc-primitives-debug = { workspace = true, default-features = true }
moonbeam-rpc-trace = { workspace = true }

# Substrate
sc-client-api = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

# Frontier
fc-api = { workspace = true }
fc-rpc = { workspace = true, features = [ "rpc-binary-search-estimate" ] }
fc-rpc-core = { workspace = true }
fc-storage = { workspace = true }
fp-evm = { workspace = true }
fp-rpc = { workspace = true }
